--- a/cmp-provider/pom.xml
+++ b/cmp-provider/pom.xml
@@ -11,7 +11,7 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<dubbo-spring-boot.version>1.0.0</dubbo-spring-boot.version>
+		<dubbo-spring-boot.version>1.0.1</dubbo-spring-boot.version>
 		<druid.version>1.1.10</druid.version>
 	</properties>
 
@@ -59,11 +59,11 @@
 		</dependency>
 
 		<!-- Spring Boot + Dubbo 依赖 -->
-		<dependency>
-			<groupId>org.lynee.dubbo.springboot</groupId>
-			<artifactId>spring-boot-starter-dubbo</artifactId>
-			<version>${dubbo-spring-boot.version}</version>
-		</dependency>
+        <dependency>
+            <groupId>com.alibaba.spring.boot</groupId>
+            <artifactId>dubbo-spring-boot-starter</artifactId>
+            <version>${dubbo-spring-boot.version}</version>
+        </dependency>
 
 
 		<!-- 常用api方法 -->
